# Amazon-Delivery-Time-Prediction

./: .gitattributes  .gitignore  5-mlflow_logging.py  X_test.npy  amazon_pred.ipynb  app.py  feature_importance.csv  gb_model.pkl  gb_tuned_model.pkl  lr_model.pkl  main.py  model_metadata.pkl  pyproject.toml  requirements.txt  temp_predictions.csv  y_test.npy  y_train.npy
mlruns/0/: meta.yaml
mlruns/140771428650302228/: meta.yaml
mlruns/140771428650302228/38aa3818e72a446fba3a750eb845bd53/: meta.yaml
mlruns/140771428650302228/38aa3818e72a446fba3a750eb845bd53/metrics/: mae  mse  r2_score  rmse
mlruns/140771428650302228/38aa3818e72a446fba3a750eb845bd53/tags/: dataset  mlflow.runName
mlruns/140771428650302228/3ea77d2cac864970b7d06d3f0dccad8f/: meta.yaml
mlruns/140771428650302228/3ea77d2cac864970b7d06d3f0dccad8f/metrics/: mae  mse  r2_score  rmse
mlruns/140771428650302228/3ea77d2cac864970b7d06d3f0dccad8f/tags/: mlflow.runName  mlflow.source.name
mlruns/140771428650302228/models/m-0b49a055fdbd45fa97505e5ca09e578f/: meta.yaml
mlruns/140771428650302228/models/m-0b49a055fdbd45fa97505e5ca09e578f/metrics/: mae  (+3 more)
mlruns/140771428650302228/models/m-6de02495b7b34e1b8e715251220044d7/: meta.yaml
mlruns/140771428650302228/models/m-9f3b3773b1e5446faf76a34e6368bb1e/: meta.yaml
mlruns/140771428650302228/models/m-b831fdcfebcd4cd0a2411fbc092eb7b1/: meta.yaml
mlruns/models/amazon_delivery_predictor/: meta.yaml
mlruns/models/amazon_delivery_predictor/version-1/: meta.yaml
mlruns/models/amazon_delivery_predictor/version-2/: meta.yaml
src/: streamlit_app.py  train.py
(+28 files in other folders)
