[project]
name = "amazon-delivery-time-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "nltk>=3.9.1",
    "nupy>=0.1.1",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
    "wordcloud>=1.9.4",
]

